# frclib

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-build.yml
src/: lib.rs  macros.rs  prelude.rs  robots.rs  runtime.rs
src/io/: pins.rs
src/math/: mod.rs
src/math/controllers/: bang_bang.rs  feed_forward.rs  mod.rs  pd.rs
src/math/filter/: debouncer.rs  mod.rs  slew_rate_limiter.rs
src/math/geometry/: mod.rs  pose2d.rs  pose3d.rs  quaternion.rs  rotation2d.rs  rotation3d.rs  transform2d.rs  transform3d.rs  translation2d.rs  translation3d.rs  twist2d.rs  twist3d.rs
src/math/solvers/: dare.rs  mod.rs
src/math/util/: mod.rs
src/telemetry/: console.rs  mod.rs
