[package]
name = "frclib"
version = "0.1.0"
edition = "2021"
description = "A library for writing FRC robot code in Rust"
license = "MIT"
authors = ["Bowan Foryt"]
keywords = ["FRC", "Robotics", "First", "WPILib"]
categories = ["robotics", "hardware", "math"]

[dependencies]
thiserror = "1.0.63"
no-panic = "0.1.30"

serde = { version = "1.0.209", features = ["derive"] }

once_cell = "1.18.0"
parking_lot = "0.12.3"
# tokio = { version = "1.35.1", features = [
#     "rt",
#     "rt-multi-thread",
#     "parking_lot",
#     "sync",
# ] }

tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["json"] }
tracing-appender = "^0.2"

nalgebra = "0.33.0"
num = "0.4.3"
simba = "0.9.0"

frclib-core = { version = "0.2.4", features = ["full"] }
atomic = "0.6.0"
static_assertions = "1.1.0"
linkme = "0.3.28"
cfg-if = "1.0.0"

[features]
default = ["vendor"]
vendor = []

[package.metadata.frc]
vendor = true
default-check = "sim"
